--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 		</div>
 	</main>
 	<footer>
+		<div class="footer_icons">
+			<a href="https://www.linkedin.com/feed/" aria-label="A Link to my LinkedIn page"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+			<a href="https://www.instagram.com/artsypassy/" aria-label="A link to my Instagram page"><i class="fa-brands fa-instagram-square fa-2xl"></i></a>
+		</div>
 		<p>Paschalia Nsato &copy; 2022</p>
 	</footer>
 </body>
