--- a/safari.html
+++ b/safari.html
@@ -64,8 +64,8 @@
 				<img src = "images/jump.webp" alt="A traditional Masaai man jumping high during a dance" width="200"/>
 		</div>
 
+		<h2>Safari Photos</h2>
 		<div class="gallery">
-			<h2>Safari Photos</h2>
 		<p>After stopping by the Maasai village, I visited two national parks: Mikumi National and Selous Game reserve.
 			The national parks are located in an the Morogoro region in Tanzania. I saw many animals, here are some photos I took there.</p>
 			<img src= "images/zebra.webp" alt="A photo of a Zebra in Tanzania" width="200"/>
@@ -80,6 +80,10 @@
 	</main>
 
 	<footer>
+		<div class="footer_icons">
+			<a href="https://www.linkedin.com/feed/" aria-label="A Link to my LinkedIn page"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+			<a href="https://www.instagram.com/artsypassy/" aria-label="A link to my Instagram page"><i class="fa-brands fa-instagram-square fa-2xl"></i></a>
+		</div>
 		<p>Paschalia Nsato &copy; 2022</p>
 	</footer>
 </body>
