--- a/work.html
+++ b/work.html
@@ -38,16 +38,16 @@
 
 	<main class="container" id = "main">
 		<h1>Work</h1>
-		<h2>Graduation Photoshoots</h2>
-		<div class="gallery">
+		<h2>Photoshoots</h2>
+		<div class="grid_gallery">
 			<img class="resize" src = "images/sandra_2.webp" alt="a potrait of a black woman in graduation garments" width="200"/>
 			<img src = "images/elsie.webp" alt="a potrait of a black woman in graduation garments" width="200"/>
 			<img src = "images/momma.webp" alt="a woman in a graduation gown kissing her mother on the cheek" width="200"/>
 			<img src = "images/john.webp" alt="a potrait of a black man in graduation garments" width="200"/>
 			<img src="images/nick_grad.webp" alt="a portrait of a white man in graduation garments" width="200"/>
 
-		<h2>Other Photoshoots</h2>
-		<div class="gallery">
+		<!-- <h2>Other Photoshoots</h2> -->
+
 			<img src = "images/engagement.webp" alt="a photo of a black engageded couple" width="200"/>
 			<img src="images/riya-2.webp" alt="a photo of an indian woman in a red sari" width="200"/>
 			<img src="images/riya-3.webp" alt="a photo of an indian woman in a red sari" width="200"/>
@@ -58,8 +58,8 @@
 
 	<footer>
 		<div class="footer_icons">
-			<a href="https://www.linkedin.com/feed/"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-			<a href="https://www.instagram.com/artsypassy/"><i class="fa-brands fa-instagram-square fa-2xl"></i></a>
+			<a href="https://www.linkedin.com/feed/" aria-label="A Link to my LinkedIn page"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+			<a href="https://www.instagram.com/artsypassy/" aria-label="A link to my Instagram page"><i class="fa-brands fa-instagram-square fa-2xl"></i></a>
 		</div>
 		<p>Paschalia Nsato &copy; 2022</p>
 	</footer>
