--- a/about.html
+++ b/about.html
@@ -36,12 +36,10 @@
 		</nav>
 	</header>
 	<main class="container about_container" id="main">
+		<h1>About Me</h1>
 		<img class="about-img" src="images/paschalia.webp" alt="a photograph of a black woman who wrote this website" width="200"/>
-		<div class="background">
-
-		</div>
+	
 		<div class="about-text">
-			<h1>About Me</h1>
 			<p>Hello there! My name is Paschalia Nsato. I am located in Ann Arbor, MI, but I am originally from Dar es Salaam, Tanzania.  I would describe myself as an all-around creative person.
 				I love art, design, and photography. I have been drawing ever since I was little, and I started doing client work photography in 2019. 
 				I do graduation, engagement, family events, beauty and children photoshoots. However, I am open to being contacted on any photography opportunity.
@@ -62,13 +60,15 @@
 			<fieldset>
 			  <legend>CONTACT ME</legend>
 
-			  <label for="name_id">Name</label>
+			  <label for="name_id"><i class="fa-solid fa-user"></i> Name</label>
 			  <input type="text" placeholder="Enter Your Name" id = "name_id" name="name" required>
 
-			  <label for="email_id">Email</label>
+			  <label for="email_id"><i class="fa-solid fa-envelope"></i> Email</label>
 			  <input type="email" placeholder="Enter Your Email" id = "email_id" name="email" required>
 
-		  
+			  <label for="Phone"><i class="fa-solid fa-phone"></i>  Phone Number (Optional) </label>
+			  <input type="number" placeholder="Enter Your Phone number" name="number" optional>
+
 			  <label for="msg">Message</label>
 			  <textarea placeholder="Leave your message here" id = "msg" name="mesg" required></textarea><br>
 		  
@@ -80,6 +80,10 @@
 		   </form>
 	</main>
 	<footer>
+		<div class="footer_icons">
+			<a href="https://www.linkedin.com/feed/" aria-label="A Link to my LinkedIn page"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+			<a href="https://www.instagram.com/artsypassy/" aria-label="A link to my Instagram page"><i class="fa-brands fa-instagram-square fa-2xl"></i></a>
+		</div>
 		<p>Paschalia Nsato &copy; 2022</p>
 	</footer>
 </body>
